# rust-gpu-build-dependecies-bug

./: Cargo.toml  rust-toolchain
engine/: Cargo.toml  build.rs
engine-shader-derive/: Cargo.toml
engine-shader-derive/src/: lib.rs
engine/src/: lib.rs  main.rs
other-shader/: Cargo.toml
other-shader/src/: lib.rs
shader/: Cargo.toml  build.rs
shader/src/: lib.rs
