[workspace]
members = [
    "engine",
    "shader"
]

# Using github master doesn't change anything in it's behaviour
#[patch.crates-io]
#spirv-std = { git = 'https://github.com/EmbarkStudios/rust-gpu.git' }
#spirv-builder = { git = 'https://github.com/EmbarkStudios/rust-gpu.git' }

[workspace.dependencies]
spirv-std = { version = "0.4.0", features = ["glam"] }
spirv-builder = { version = "0.4.0", default-features = false, features = ["use-installed-tools"] }
