[workspace]
members = [
    "engine",
    "shader",
    "engine-shader-derive",
    "other-shader"
]

# Using github master doesn't change anything in it's behaviour
#[patch.crates-io]
#spirv-std = { git = 'https://github.com/EmbarkStudios/rust-gpu.git' }
#spirv-builder = { git = 'https://github.com/EmbarkStudios/rust-gpu.git' }

[workspace.dependencies]
spirv-std = { version = "0.6" }
spirv-builder = { version = "0.6", default-features = false, features = ["use-installed-tools"] }

engine-shader-derive = { path = "./engine-shader-derive" }
shader = { path = "./shader" }
engine = { path = "./engine" }
other-shader = { path = "./other-shader" }
